www/css/styles.css
/* ... */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {body .quiz-container .btncommon { width:94%;} body .quiz-container .headlabel { width:98%;} body .quiz-container .paracont{ width:99%;} body 
.qustn-head { width:97%; margin-left:1%;}
.course-quiz-main-container, .fav-quiz-main-container , .res-quiz-main-container  { position:fixed; overflow:hidden;}
body .float_footer .navbar-fixed-bottom {top: 835px !important;}
}
 
 body.crosswordwrap #displayContentFav, body.crosswordwrap  #container #content-webview {margin-top:0  !important;}
 body.crosswordwrap  #container #content-webview  { position:relative !important;}
 body.crosswordwrap .iframewrap_crs .close { left:-10px; position:relative !important;}
 body.crosswordwrap  { position:relative; overflow:scroll;}
#mob_book_shelf { padding-bottom:300px;}

@media only screen and (min-width : 375px) and (max-width : 667px) and (orientation : landscape){ 
.hme_hdrbx .onlineStatus { width:33px; height:auto; margin-top: 7px;}
body #loginPop { margin-top:-120px;}
 body .login-popup { margin-left:-197px !important;}
}

@media only screen and (min-width : 375px) and (max-width : 667px) and (orientation : portrait){ 
 body .login-popup { margin-left:-165px !important;}
}

html body .resource_wrap { padding-bottom:8% !important;}

.scormPage  .ifram_cls_btn { top:28px;}

 /* Mobile Online App Start*/
 .onlineApp body.course-quiz-main-container { overflow:show; position:relative;}
 .onlineApp .course_ifram_cls_btn span img{ height:25px;}
.onlineApp .course_ifram_cls_btn { position:relative; left:-10px;}
.onlineApp .quiz-main-container #container #content-webview { padding-top:0;}
 /* Mobile Online App End*/
 
  .ie8 .resource_wrap #displayContent { padding-top:74px;}
  div#displayContent.quiz-container { padding-top:45px;}

.report-details-show #load_wrapper {position: fixed  !important; top:45% !important; display:block !important;}
.report-details-show .overlaycontainer { width:100%; position:fixed; display:block !important;}

.overlay-video-quiz #load_wrapper, .overlay-video-quiz .overlaycontainer { display:block !important;}
.overlay-video-quiz .overlaycontainer { width:100%; position:fixed !important; z-index:999 !important;}

.homeSwiper-wrapper * {-webkit-transform: translate3d(0, 0, 0);}
	@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {    
		html body .pro_container .ui-draggable-dragging 
			{
				width: 195px !important;
			}
	}

@media handheld, only screen and (max-width:1024px){
    /*Other Buttons hover Start (Touch Devices)*/
    .errorCodOK:hover, .reg_grnbtn a:hover, #signin a:hover, .enterbtn a:hover, .OKbtn a:hover, #save-notes-btn:hover, .reg_grybtn a:hover, .cancel-notes-btn:hover, .signin_btn a:hover, #ChgPsdcancelBtn a:hover, #cancel-notes-btn:hover { box-shadow:none; -webkit-box-shadow:none;}
    
    .errorCodOK.active, .reg_grnbtn a.active, #signin a.active, .enterbtn a.active, .OKbtn a.active, #save-notes-btn.active, .reg_grybtn a.active, .cancel-notes-btn.active, .signin_btn a.active, #ChgPsdcancelBtn a.active, #cancel-notes-btn.active { box-shadow: 0 0 3px 2px #6ebd9e; -webkit-box-shadow:0 0 3px 2px #6ebd9e;}
    /*Other Buttons hover Ends*/
	#content-webview .quizdtlgrid th { text-align:center;}
}

@media only screen and (min-width : 300px) and (max-width : 667px) {
 .widget-maincontent-div { padding-bottom:50px;}
 #profile_view.pro_container, #profile_edit.pro_container { padding-bottom:80px !important; float: left;
     min-height: 600px;}
#courseContent-iframe .qustn-head { width:100%; margin-left:0; margin-top: 20px;}
 .bycourse-temp #exportdiv { float:right; clear:none !important;}
}

